--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,43 +10,30 @@ project(
   LANGUAGES CXX
 )
 
-set(MODULE_NS ayin)
+# Module: namespace::name
 set(MODULE_NAME ayproj)
+set(MODULE_NS ayin)
 
 # Project options
 include(cmake/Options.cmake)
-
-# 
+# Utils 
 include(cmake/Utils.cmake)
-
 # Init cmake environment
 include(cmake/Init.cmake)
 
-# Project module
+# Third party
+add_subdirectory(third_party)
 
+# Module library
 add_library(${MODULE_NAME} INTERFACE)
+add_library(${MODULE_NS}::${MODULE_NAME} ALIAS ${MODULE_NAME})
 
 target_include_directories(${MODULE_NAME} INTERFACE include)
 
-add_library(${MODULE_NS}::${MODULE_NAME} ALIAS ${MODULE_NAME})
+if(${PROJECT_NAME}_IS_MAIN)
+  # Main
+  add_subdirectory(main)
 
-# Main
-
-file(
-  GLOB
-  ${MODULE_NAME}_MAIN_FILES
-  "main/*.c"
-  "main/*.cpp"
-  "main/*.cc"
-)
-
-message(${${MODULE_NAME}_MAIN_FILES})
-add_executable(${MODULE_NAME}_main ${${MODULE_NAME}_MAIN_FILES})
-
-target_link_libraries(${MODULE_NAME}_main PUBLIC ${MODULE_NS}::${MODULE_NAME})
-
-# Examples
-#add_subdirectory(examples)
-
-# Tests
-#add_subdirectory(tests)
+  # Tests
+  add_subdirectory(tests)
+endif()
