--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,14 +22,11 @@ include(cmake/Utils.cmake)
 # Init cmake environment
 include(cmake/Init.cmake)
 
-# Third party
-#add_subdirectory(third_party)
-
 # ==================================================
 # Module library
 
 add_library(${MODULE_NAME} INTERFACE)
-target_include_directories(${MODULE_NAME} INTERFACE include)
+target_include_directories(${MODULE_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 add_library(${MODULE_NS}::${MODULE_NAME} ALIAS ${MODULE_NAME})
 message(STATUS "Build library `${MODULE_NS}::${MODULE_NAME}`")
